<resources>
    <string name="app_name">Just Java</string>
    <string name="name">Name</string>
    <string name="toppings">Toppings</string>
    <string name="quantity">Quantity</string>
    <string name="order_summary">Order Summary</string>
    <string name="calculate">Calculate</string>
    <string name="clear">Clear order</string>
    <string name="submit">Submit Order</string>
    <string name="add_cream">Add whipped cream</string>
    <string name="add_chocolate">Add chocolate</string>
    <string name="and_chocolate"> and chocolate</string>
    <string name="total">Total</string>
    <string name="thank_you">Thank you!</string>
    <string name="cancel_message">Order canceled</string>
    <string name="submit_message">Can\'t submit empty order</string>
    <string name="email_subject">Coffe order for </string>
    <string name="whiped_cream">Whipped cream - 2 zł/cup</string>
    <string name="chocolate">Chocolate - 3 zł/cup</string>


</resources>
