<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF176"
    >

    <LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <EditText
            android:id="@+id/name_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16sp"
            android:layout_marginRight="16sp"
            android:hint="@string/name"
            android:paddingTop="16dp"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/toppings" />

        <CheckBox
            android:id="@+id/cream_checkBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingLeft="24dp"
            android:text="@string/whiped_cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate_checkbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="12dp"
            android:paddingLeft="24dp"
            android:text="@string/chocolate"
            android:textSize="16sp" />

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingLeft="16dp"
            android:paddingTop="12dp"
            android:paddingBottom="12dp"
            android:text="@string/quantity" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/decrease_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginLeft="12dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/roundedbutton"
                android:onClick="decrease"
                android:text="-"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="0"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/increase_button"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/roundedbutton"
                android:onClick="increase"
                android:text="+"
                android:textColor="@android:color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <TextView
            style="@style/HeaderTextStyle"
            android:paddingLeft="16dp"
            android:paddingBottom="12dp"
            android:text="@string/order_summary" />

        <TextView
            android:id="@+id/order_summary_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:paddingLeft="16dp"
            android:text="0,00 zł"
            android:textAlignment="textStart"
            android:textColor="@android:color/black"
            android:textSize="14sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_blue_dark"
                android:onClick="submitOrder"
                android:padding="4dp"
                android:text="@string/calculate"
                android:textColor="@android:color/white" />

            <Button
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/darker_gray"
                android:onClick="clearOrder"
                android:padding="4dp"
                android:text="@string/clear"
                android:textColor="@android:color/white" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="12dp"
                android:layout_marginTop="16dp"
                android:background="@android:color/holo_blue_dark"
                android:onClick="composeEmail"
                android:padding="4dp"
                android:text="@string/submit"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <ImageView
            android:id="@+id/coffee_image"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:baselineAlignBottom="true"
            app:srcCompat="@drawable/coffee" />
    </LinearLayout>
</ScrollView>
